--- a/assets/style.css
+++ b/assets/style.css
@@ -13,3 +13,14 @@ td {
     padding-left: 50px;
     padding-right: 25px;
 }
+
+table, th, td {
+
+    border: 1px solid black;
+}
+
+table {
+
+    width: 100%;
+    background-color: azure;
+}
